# SkyPro_OOP_beta

./: pyproject.toml
src/: items.py  main.py
tests/: test_items.py
